added place list view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="end_time_input">End Time</string>
     <string name="checklist_inout">CheckList</string>
     <string name="save">Save</string>
+    <string name="image_of_place">Image of place</string>
 </resources>
