--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,11 @@
     <string name="checklist_inout">CheckList</string>
     <string name="save">Save</string>
     <string name="image_of_place">Image of place</string>
+    <string name="no_query">no query</string>
+    <string name="required">Required</string>
+    <string name="failed">Failed</string>
+    <string name="Good">good</string>
+    <string name="delete">Delete</string>
+    <string name="Discard_changes">Discard Changes</string>
+    <string name="stay">Stay</string>
 </resources>
